@@ -3,7 +3,6 @@ package com.haizul.taskbot;
 import org.telegram.telegrambots.client.okhttp.OkHttpTelegramClient;
 import org.telegram.telegrambots.longpolling.util.LongPollingSingleThreadUpdateConsumer;
 import org.telegram.telegrambots.meta.api.methods.AnswerCallbackQuery;
-import org.telegram.telegrambots.meta.api.methods.GetFile;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
 import org.telegram.telegrambots.meta.api.objects.Update;
@@ -13,28 +12,17 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKe
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 import org.telegram.telegrambots.meta.generics.TelegramClient;
 
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.time.LocalDateTime;
-import java.util.*;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import static java.lang.Math.toIntExact;
 
 public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
 
-    private enum PendingKind {
-        TASK_TITLE, TASK_PRIORITY, TASK_CATEGORY, TASK_DUE, TASK_RECURRENCE,
-        TASK_NOTES, REMINDER_INTERVAL, CATEGORY_RENAME,
-        LOCATION_TASK_HINT  // waiting for user to send location for this task hint
-    }
-
+    private enum PendingKind { LOCATION_TASK_HINT }
     private record PendingInput(PendingKind kind, String target) {}
-
-    private enum UndoType { MARK_DONE, DELETE, SNOOZE }
-    private record UndoAction(UndoType type, String taskId, String taskTitle,
-                              Task.Status prevStatus, LocalDateTime prevDueAt) {}
 
     private final TelegramClient telegramClient;
     private final TaskService taskService;
@@ -43,11 +31,9 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
     private final NotionService notionService;
     private final NoteService noteService;
     private final String botUsername;
+
+    private final long allowedUserId;
     private final Map<Long, PendingInput> pendingInputs = new ConcurrentHashMap<>();
-    private final Map<Long, UndoAction>   undoStack     = new ConcurrentHashMap<>();
-    // Conversation history: last 5 exchanges per user for context-aware parsing
-    private final Map<Long, java.util.LinkedList<java.util.Map<String, String>>> conversationHistory = new ConcurrentHashMap<>();
-    private static final int MAX_HISTORY = 5;
 
     public TaskBot(BotConfig config, TaskService taskService,
                    ClaudeService claudeService, WhisperService whisperService,
@@ -59,14 +45,22 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
         this.notionService  = notionService;
         this.noteService    = noteService;
         this.botUsername    = config.getBotUsername();
+        this.allowedUserId  = config.getAllowedUserId();
     }
 
     @Override
     public void consume(Update update) {
         try {
+            // Security: reject anyone who isn't the allowed user
+            long userId = 0;
+            if (update.hasMessage() && update.getMessage().getFrom() != null)
+                userId = update.getMessage().getFrom().getId();
+            else if (update.hasCallbackQuery())
+                userId = update.getCallbackQuery().getFrom().getId();
+            if (allowedUserId != 0 && userId != allowedUserId) return;
             if (update.hasMessage()) {
-                if (update.getMessage().hasText())     handleMessage(update);
-                else if (update.getMessage().hasVoice())    handleVoice(update);
+                if (update.getMessage().hasText())         handleMessage(update);
+                else if (update.getMessage().hasVoice())   handleVoice(update);
                 else if (update.getMessage().hasLocation()) handleLocation(update);
             } else if (update.hasCallbackQuery()) {
                 handleCallback(update);
@@ -80,43 +74,26 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
     public TelegramClient getTelegramClient() { return telegramClient; }
     public String getBotUsername()            { return botUsername; }
 
-    // ── Voice messages ───────────────────────────────────────────────────────
+    // ── Voice ────────────────────────────────────────────────────────────────
 
     private void handleVoice(Update update) {
         long chatId = update.getMessage().getChatId();
         long userId = update.getMessage().getFrom().getId();
 
-        if (whisperService == null) {
-            sendText(chatId, "Voice input is not enabled. Set WHISPER_API_KEY to use voice messages."); return;
-        }
+        if (whisperService == null) { sendText(chatId, "Voice input not enabled. Set WHISPER_API_KEY."); return; }
 
-        sendText(chatId, "🎤 Transcribing your voice note...");
-        String fileId = update.getMessage().getVoice().getFileId();
-        String transcription = whisperService.transcribe(fileId);
+        sendText(chatId, "🎤 Transcribing...");
+        String transcription = whisperService.transcribe(update.getMessage().getVoice().getFileId());
 
         if (transcription == null || transcription.isBlank()) {
-            sendText(chatId, "Sorry, I couldn't transcribe that. Please try again or type your task."); return;
+            sendText(chatId, "Couldn't transcribe that. Please try again."); return;
         }
 
         sendText(chatId, "🎤 Heard: \"" + transcription + "\"");
-
-        if (claudeService != null) {
-            addToHistory(userId, "user", transcription);
-            handleNaturalLanguage(chatId, userId, transcription);
-        } else if (notionService != null && noteService != null) {
-            // No Claude for routing — save as note directly
-            handleSaveNote(chatId, userId, transcription, "voice");
-        } else {
-            try {
-                Task task = taskService.createTask(userId, chatId, taskService.parseAddCommand(transcription));
-                sendTaskAdded(chatId, task);
-            } catch (Exception e) {
-                sendText(chatId, "Couldn't parse that. Try typing it instead.");
-            }
-        }
+        routeToAgent(chatId, userId, transcription);
     }
 
-    // ── Location messages ────────────────────────────────────────────────────
+    // ── Location ─────────────────────────────────────────────────────────────
 
     private void handleLocation(Update update) {
         long chatId = update.getMessage().getChatId();
@@ -124,33 +101,25 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
         double lat  = update.getMessage().getLocation().getLatitude();
         double lng  = update.getMessage().getLocation().getLongitude();
 
-        // Check if user is setting a location reminder for a specific task
         PendingInput pending = pendingInputs.get(userId);
         if (pending != null && pending.kind() == PendingKind.LOCATION_TASK_HINT) {
             pendingInputs.remove(userId);
-            String hint = pending.target();
-            taskService.findTaskByTitleHint(userId, hint).ifPresentOrElse(task -> {
+            taskService.findTaskByTitleHint(userId, pending.target()).ifPresentOrElse(task -> {
                 taskService.setLocationReminder(userId, task.shortId(), lat, lng, 200);
-                sendText(chatId, "📍 Location reminder set for \"" + task.getTitle()
-                        + "\"!\nI'll remind you when you're within 200m of this spot.");
-            }, () -> sendText(chatId, "Couldn't find task \"" + hint + "\". Location not saved."));
+                sendText(chatId, "📍 Location reminder set for \"" + task.getTitle() + "\"!");
+            }, () -> sendText(chatId, "Couldn't find task \"" + pending.target() + "\"."));
             return;
         }
 
-        // Otherwise check if arriving at any task locations
         List<Task> triggered = taskService.checkLocationTriggers(userId, lat, lng);
         if (triggered.isEmpty()) {
-            sendText(chatId, "📍 Location received. No tasks are linked to this area.\n\n"
-                    + "To set a location reminder, say:\n\"remind me when I get to [place] for the [task name] task\"\nthen send your location.");
+            sendText(chatId, "📍 Location received. No tasks linked to this area.");
         } else {
-            for (Task task : triggered) {
-                sendText(chatId, "📍 Location reminder!\n\nYou're near the location set for:\n\n"
-                        + taskService.formatTask(task));
-            }
+            triggered.forEach(t -> sendText(chatId, "📍 You're near the location for:\n\n" + taskService.formatTask(t)));
         }
     }
 
-    // ── Text message routing ─────────────────────────────────────────────────
+    // ── Text messages ─────────────────────────────────────────────────────────
 
     private void handleMessage(Update update) {
         long chatId = update.getMessage().getChatId();
@@ -161,578 +130,88 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
             sendText(chatId, pendingInputs.remove(userId) != null ? "Cancelled." : "Nothing to cancel."); return;
         }
         if (pendingInputs.containsKey(userId)) {
-            PendingInput p = pendingInputs.get(userId);
-            if (p.kind() == PendingKind.LOCATION_TASK_HINT) {
-                sendText(chatId, "Please send your location (use Telegram's 📎 → Location) to set the reminder, or /cancel.");
-                return;
-            }
-            if (text.startsWith("/")) { sendText(chatId, "Edit in progress. Send the value or use /cancel."); return; }
-            handlePendingInput(chatId, userId, text); return;
+            sendText(chatId, "Please send your location or /cancel."); return;
         }
 
+        // Slash commands
         switch (text) {
-            case "/start"     -> sendText(chatId, "Task bot is live.\n\n" + TaskService.usageText());
-            case "/help"      -> sendText(chatId, TaskService.usageText());
-            case "/tasks"     -> sendTaskList(chatId, "📋 Active Tasks", taskService.getActiveTasks(userId), true);
-            case "/today"     -> sendTaskList(chatId, "🗓 Due Today", taskService.getTodayTasks(userId), true);
-            case "/overdue"   -> sendTaskList(chatId, "⚠️ Overdue", taskService.getOverdueTasks(userId), true);
-            case "/stale"     -> sendTaskList(chatId, "🧊 Stale Tasks", taskService.getStaleTasks(userId), true);
-            case "/doneitems" -> sendTaskList(chatId, "✅ Completed", taskService.getDoneTasks(userId), false);
-            case "/cleardone" -> { int n = taskService.deleteAllDone(userId); sendText(chatId, n > 0 ? "🗑 Cleared " + n + " completed task(s)." : "No completed tasks to clear."); }
-            case "/review"    -> sendText(chatId, taskService.getReviewSummary(userId));
-            case "/habits"    -> sendHabitList(chatId, userId);
-            case "/categories"-> sendCategoryList(chatId, userId);
-            case "/templates" -> sendTemplateList(chatId, userId);
-            case "/edittasks"    -> sendEditableTaskList(chatId, "📋 Active Tasks", taskService.getActiveTasks(userId));
-            case "/recentnotes"  -> handleRecentNotes(chatId, userId);
-            case "/setupnotes"   -> handleSetupNotes(chatId);
+            case "/start"        -> { sendText(chatId, "👋 Hey! I'm Proton, your personal productivity bot.\n\nJust talk to me naturally — add tasks, save notes, check what's due, anything. What do you need?"); return; }
+            case "/help"         -> { sendText(chatId, helpText()); return; }
+            case "/tasks"        -> { sendTaskList(chatId, "📋 Active Tasks", taskService.getActiveTasks(userId)); return; }
+            case "/today"        -> { sendTaskList(chatId, "🗓 Due Today", taskService.getTodayTasks(userId)); return; }
+            case "/overdue"      -> { sendTaskList(chatId, "⚠️ Overdue", taskService.getOverdueTasks(userId)); return; }
+            case "/stale"        -> { sendTaskList(chatId, "🧊 Stale", taskService.getStaleTasks(userId)); return; }
+            case "/doneitems"    -> { sendDoneList(chatId, taskService.getDoneTasks(userId)); return; }
+            case "/cleardone"    -> { int n = taskService.deleteAllDone(userId); sendText(chatId, n > 0 ? "🗑 Cleared " + n + " completed tasks." : "No completed tasks."); return; }
+            case "/review"       -> { sendText(chatId, taskService.getReviewSummary(userId)); return; }
+            case "/habits"       -> { sendHabitList(chatId, userId); return; }
+            case "/recentnotes"  -> { handleRecentNotes(chatId, userId); return; }
+            case "/setupnotes"   -> { handleSetupNotes(chatId); return; }
+            case "/edittasks"    -> { sendEditableTaskList(chatId, taskService.getActiveTasks(userId)); return; }
             case "/stoppomodoro" -> {
                 boolean stopped = taskService.stopFocusSession(userId);
                 UserSettings us = taskService.getUserSettings(userId);
                 taskService.saveUserSettings(userId, us.getQuietStart(), us.getQuietEnd(), null);
-                sendText(chatId, stopped ? "⏹ Pomodoro stopped." : "No active Pomodoro session.");
+                sendText(chatId, stopped ? "⏹ Pomodoro stopped." : "No active session."); return;
             }
-            case "/add"       -> sendText(chatId, addHelpText());
-            default           -> handleTextCommand(chatId, userId, text);
         }
-    }
 
-    private void handleTextCommand(long chatId, long userId, String text) {
-        if (text.startsWith("/add ")) {
-            String raw = text.substring(5).trim();
-            if (raw.isEmpty()) { sendText(chatId, "Please enter a task after /add"); return; }
-            try { sendTaskAdded(chatId, taskService.createTask(userId, chatId, taskService.parseAddCommand(raw))); }
-            catch (Exception e) { sendText(chatId, "Couldn't parse that. Send /add to see examples."); }
-            return;
-        }
-        if (text.startsWith("/done "))   { doMarkDone(chatId, userId, text.substring(6).trim()); return; }
-        if (text.startsWith("/delete ")) { doDelete(chatId, userId, text.substring(8).trim()); return; }
-        if (text.startsWith("/snooze ")) {
-            String[] p = text.substring(8).trim().split("\\s+");
-            if (p.length < 2) { sendText(chatId, "Usage: /snooze <id> <hours>"); return; }
-            doSnooze(chatId, userId, p[0], Integer.parseInt(p[1])); return;
-        }
-        if (text.startsWith("/addcategory ")) {
-            String name = text.substring(13).trim();
-            if (name.isBlank()) { sendText(chatId, "Usage: /addcategory <n>"); return; }
-            taskService.addCategory(userId, name); sendText(chatId, "Added category: " + name.trim().toLowerCase()); return;
-        }
         if (text.startsWith("/pomodoro")) {
-            // Usage: /pomodoro [work] [break] [rounds]  e.g. /pomodoro 25 5 4
             String[] parts = text.trim().split("\\s+");
             int work   = parts.length > 1 ? parseIntSafe(parts[1], 25) : 25;
             int brk    = parts.length > 2 ? parseIntSafe(parts[2], 5)  : 5;
             int rounds = parts.length > 3 ? parseIntSafe(parts[3], 4)  : 4;
-            handleStartPomodoro(chatId, userId, "your session", work, brk, rounds);
-            return;
+            handleStartPomodoro(chatId, userId, "your session", work, brk, rounds); return;
         }
         if (text.startsWith("/search ")) {
-            String query = text.substring(8).trim();
-            sendTaskList(chatId, "🔍 Search: " + query, taskService.searchTasks(userId, query), true); return;
+            sendTaskList(chatId, "🔍 " + text.substring(8).trim(), taskService.searchTasks(userId, text.substring(8).trim())); return;
         }
-        if (text.startsWith("/")) { sendText(chatId, "Unknown command. Use /help"); return; }
+        if (text.startsWith("/")) { sendText(chatId, "Unknown command. Just talk to me naturally!"); return; }
 
-        if (claudeService != null) {
-            // Pre-process pomodoro/focus keywords in Java before hitting Claude
-            String lower = text.toLowerCase(java.util.Locale.ROOT);
-            if (lower.contains("stop pomodoro") || lower.contains("cancel pomodoro")
-                    || lower.contains("stop focus") || lower.contains("end session")
-                    || lower.contains("cancel session")) {
-                boolean stopped = taskService.stopFocusSession(userId);
-                UserSettings us = taskService.getUserSettings(userId);
-                taskService.saveUserSettings(userId, us.getQuietStart(), us.getQuietEnd(), null);
-                sendText(chatId, stopped ? "⏹ Session stopped." : "No active session.");
-                return;
-            }
-            // Simple pomodoro start: must contain "pomodoro" but NOT other task-related keywords
-            if (lower.contains("pomodoro") && !lower.contains("task") && !lower.contains("what")
-                    && !lower.contains("show") && !lower.contains("list") && !lower.contains("my tasks")) {
-                // Parse optional duration e.g. "pomodoro for 1 hour" → 60 min total ÷ 25 = rounds
-                int work = 25, brk = 5, rounds = 4;
-                java.util.regex.Matcher mWork = java.util.regex.Pattern.compile("(\\d+)\\s*min").matcher(lower);
-                java.util.regex.Matcher mHour = java.util.regex.Pattern.compile("(\\d+)\\s*hour").matcher(lower);
-                if (mWork.find()) work = Integer.parseInt(mWork.group(1));
-                else if (mHour.find()) { int totalMins = Integer.parseInt(mHour.group(1)) * 60; rounds = Math.max(1, totalMins / 25); }
-                handleStartPomodoro(chatId, userId, "your session", work, brk, rounds);
-                return;
-            }
-            addToHistory(userId, "user", text);
-            handleNaturalLanguage(chatId, userId, text);
-        } else sendText(chatId, "Unknown command. Use /help\n\n💡 Set CLAUDE_API_KEY to enable natural language.");
-    }
-
-    // ── Natural language ─────────────────────────────────────────────────────
-
-    private void handleNaturalLanguage(long chatId, long userId, String text) {
-        ClaudeService.ParsedTask p = claudeService.parse(text, getHistory(userId));
-
-        switch (p.type()) {
-            case "task" -> {
-                try {
-                    Task created = taskService.createTask(userId, chatId,
-                            new TaskService.AddTaskRequest(p.title(), p.priority(), p.category(), p.dueAt(), p.recurrence(), p.notes()));
-                    sendTaskAdded(chatId, created);
-                    // Record a readable summary so follow-up messages like "actually make it 10am" work
-                    recordAssistantResponse(userId, "Added task: \"" + created.getTitle() + "\" due " + taskService.friendlyDate(created.getDueAt()));
-                } catch (Exception e) { sendText(chatId, "Understood but couldn't save. Try /add instead."); }
-            }
-
-            case "list_tasks" -> {
-                boolean filtered = p.filterPriority() != null || p.filterCategory() != null || p.filterDueRange() != null;
-                sendTaskList(chatId, filtered ? buildFilterTitle(p) : "📋 Active Tasks",
-                        filtered ? taskService.getFilteredTasks(userId, p.filterPriority(), p.filterCategory(), p.filterDueRange())
-                                : taskService.getActiveTasks(userId), true);
-            }
-            case "list_today"      -> sendTaskList(chatId, "🗓 Due Today", taskService.getTodayTasks(userId), true);
-            case "list_overdue"    -> sendTaskList(chatId, "⚠️ Overdue", taskService.getOverdueTasks(userId), true);
-            case "list_stale"      -> sendTaskList(chatId, "🧊 Stale Tasks", taskService.getStaleTasks(userId), true);
-            case "list_done"       -> sendTaskList(chatId, "✅ Completed", taskService.getDoneTasks(userId), false);
-            case "list_categories" -> sendCategoryList(chatId, userId);
-            case "list_templates"  -> sendTemplateList(chatId, userId);
-            case "review"          -> sendText(chatId, taskService.getReviewSummary(userId));
-            case "edit_tasks_menu" -> sendEditableTaskList(chatId, "📋 Active Tasks", taskService.getActiveTasks(userId));
-
-            case "search_tasks" -> {
-                if (p.searchQuery() == null) { sendText(chatId, "What would you like to search for?"); return; }
-                sendTaskList(chatId, "🔍 " + p.searchQuery(), taskService.searchTasks(userId, p.searchQuery()), true);
-            }
-
-            case "mark_done" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task? Try: \"mark [task name] as done\""); return; }
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(
-                        t -> doMarkDone(chatId, userId, t.shortId()),
-                        () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\". Use /tasks to see IDs."));
-            }
-            case "mark_all_done" -> { int n = taskService.markAllDone(userId); sendText(chatId, n > 0 ? "✅ Marked " + n + " task(s) done. Fresh start!" : "No active tasks."); }
-
-            case "mark_daily_done" -> {
-                int n = taskService.markAllDoneByPriority(userId, Task.Priority.DAILY);
-                sendText(chatId, n > 0 ? "🔵 Marked " + n + " daily task(s) done. Nice work!" : "No daily tasks to complete.");
-            }
-
-
-            case "delete_task" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task would you like to delete?"); return; }
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(
-                        t -> doDelete(chatId, userId, t.shortId()),
-                        () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\"."));
-            }
-            case "delete_all_done" -> { int n = taskService.deleteAllDone(userId); sendText(chatId, n > 0 ? "🗑 Cleared " + n + " task(s)." : "No completed tasks."); }
-
-            case "snooze_task" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task?"); return; }
-                int hours = p.snoozeHours() > 0 ? p.snoozeHours() : 24;
-                List<Task> groupTargets = resolveGroupTarget(p.targetTitle(), userId);
-                if (groupTargets != null) {
-                    groupTargets.forEach(t -> taskService.snoozeTask(userId, t.shortId(), Duration.ofHours(hours)));
-                    sendText(chatId, "⏰ Snoozed " + groupTargets.size() + " task(s) by " + hours + "h."); return;
-                }
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(
-                        t -> doSnooze(chatId, userId, t.shortId(), hours),
-                        () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\"."));
-            }
-
-            case "reschedule_task" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task?"); return; }
-                if (p.newDueDate() == null)  { sendText(chatId, "When would you like to reschedule it to?"); return; }
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(t -> {
-                    taskService.updateTaskDueAtDirectly(userId, t.shortId(), p.newDueDate());
-                    sendText(chatId, "📅 Rescheduled \"" + t.getTitle() + "\" to " + taskService.friendlyDate(p.newDueDate()));
-                }, () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\"."));
-            }
-
-            case "duplicate_task" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task?"); return; }
-                Task dup = taskService.duplicateTask(userId, chatId, p.targetTitle(), p.newDueDate());
-                if (dup != null) sendTaskAdded(chatId, dup);
-                else sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\".");
-            }
-
-            case "bulk_action" -> handleBulkAction(chatId, userId, p);
-
-            case "add_notes" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task?"); return; }
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(t -> {
-                    taskService.updateTaskNotes(userId, t.shortId(), p.notes());
-                    sendText(chatId, "📝 Notes updated for \"" + t.getTitle() + "\".");
-                }, () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\"."));
-            }
-
-            case "edit_task" -> {
-                if (p.targetTitle() == null || p.editField() == null || p.editValue() == null) {
-                    sendText(chatId, "Try: \"change the [task] [field] to [value]\"\nExample: \"change gym task to high priority\""); return;
-                }
-                boolean ok = taskService.editTaskField(userId, p.targetTitle(), p.editField(), p.editValue());
-                if (ok) sendText(chatId, "✅ Updated " + p.editField() + " for task matching \"" + p.targetTitle() + "\".");
-                else sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\" or unknown field \"" + p.editField() + "\".");
-            }
-
-            case "toggle_habit" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task would you like to toggle as a habit?"); return; }
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(t -> {
-                    boolean enable = p.habitToggle();
-                    taskService.toggleHabit(userId, t.shortId(), enable);
-                    sendText(chatId, enable
-                            ? "🔄 \"" + t.getTitle() + "\" marked as a habit! I'll track your streak."
-                            : "\"" + t.getTitle() + "\" removed from habits.");
-                }, () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\"."));
-            }
-
-            case "start_focus" -> {
-                int mins = p.focusDurationMinutes() > 0 ? p.focusDurationMinutes() : 25;
-                String taskTitle = p.targetTitle() != null ? p.targetTitle() : "your task";
-                FocusSession session = taskService.startFocusSession(userId, chatId, taskTitle, mins);
-                if (session != null) {
-                    sendText(chatId, "🎯 Focus session started!\n\n"
-                            + "Task: " + taskTitle + "\n"
-                            + "Duration: " + mins + " minutes\n"
-                            + "Ends at: " + taskService.friendlyDate(session.getEndsAt()) + "\n\n"
-                            + "Put your phone down and get it done! 💪");
-                } else {
-                    sendText(chatId, "Couldn't start focus session.");
-                }
-            }
-
-
-
-            case "set_reminder_interval" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task?"); return; }
-                if (p.reminderIntervalMinutes() <= 0) { sendText(chatId, "How often (in minutes)?"); return; }
-                List<Task> groupTargets = resolveGroupTarget(p.targetTitle(), userId);
-                if (groupTargets != null) {
-                    groupTargets.forEach(t -> taskService.setReminderInterval(userId, t.shortId(), p.reminderIntervalMinutes()));
-                    sendText(chatId, "⏱ Set reminder every " + p.reminderIntervalMinutes() + " min on " + groupTargets.size() + " task(s)."); return;
-                }
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(t -> {
-                    taskService.setReminderInterval(userId, t.shortId(), p.reminderIntervalMinutes());
-                    sendText(chatId, "⏱ Set reminder for \"" + t.getTitle() + "\" every " + p.reminderIntervalMinutes() + " min.");
-                }, () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\"."));
-            }
-
-            case "set_location_reminder" -> {
-                if (p.targetTitle() == null) { sendText(chatId, "Which task should I remind you about at this location?"); return; }
-                // Verify task exists first
-                taskService.findTaskByTitleHint(userId, p.targetTitle()).ifPresentOrElse(t -> {
-                    pendingInputs.put(userId, new PendingInput(PendingKind.LOCATION_TASK_HINT, p.targetTitle()));
-                    sendText(chatId, "📍 Got it! Now send me your location (tap 📎 → Location) and I'll set a reminder for \""
-                            + t.getTitle() + "\" when you're nearby.\n\nUse /cancel to stop.");
-                }, () -> sendText(chatId, "Couldn't find \"" + p.targetTitle() + "\". Use /tasks to see your tasks."));
-            }
-
-            case "set_quiet_hours" -> {
-                if (p.quietStart() == null || p.quietEnd() == null) {
-                    sendText(chatId, "Please specify start and end, e.g. \"no reminders from 10pm to 7am\""); return;
-                }
-                taskService.saveUserSettings(userId, p.quietStart(), p.quietEnd());
-                sendText(chatId, "🌙 Quiet hours set: " + p.quietStart() + " – " + p.quietEnd());
-            }
-
-            case "save_template" -> {
-                if (p.targetTitle() == null || p.templateName() == null) {
-                    sendText(chatId, "Try: \"save the gym task as a template called workout\""); return;
-                }
-                boolean ok = taskService.saveTemplate(userId, p.targetTitle(), p.templateName());
-                sendText(chatId, ok ? "💾 Saved template \"" + p.templateName() + "\"." : "Couldn't find task \"" + p.targetTitle() + "\".");
-            }
-
-            case "use_template" -> {
-                if (p.templateName() == null) { sendText(chatId, "Which template? Try: \"use my workout template for tomorrow\""); return; }
-                Task task = taskService.useTemplate(userId, chatId, p.templateName(), p.dueAt());
-                if (task != null) sendTaskAdded(chatId, task);
-                else sendText(chatId, "Template \"" + p.templateName() + "\" not found. Use /templates to see yours.");
-            }
-
-            case "save_note" -> {
-                if (notionService == null || noteService == null) {
-                    sendText(chatId, "Notes are not enabled. Set NOTION_API_KEY and NOTION_DATABASE_ID to use this feature."); return;
-                }
-                handleSaveNote(chatId, userId, text, "text");
-            }
-
-            case "search_notes" -> {
-                if (notionService == null || noteService == null) {
-                    sendText(chatId, "Notes are not enabled. Set NOTION_API_KEY and NOTION_DATABASE_ID to use this feature."); return;
-                }
-                handleSearchNotes(chatId, text);
-            }
-
-            case "undo" -> handleUndo(chatId, userId);
-
-            default -> {
-                String reply = p.clarification() != null ? p.clarification() : "Not sure what you mean. Use /help.";
-                sendText(chatId, reply);
-            }
+        // Java pre-processing for pomodoro keywords
+        String lower = text.toLowerCase(java.util.Locale.ROOT);
+        if (lower.contains("stop pomodoro") || lower.contains("cancel pomodoro")
+                || lower.contains("stop focus") || lower.contains("end session")) {
+            boolean stopped = taskService.stopFocusSession(userId);
+            UserSettings us = taskService.getUserSettings(userId);
+            taskService.saveUserSettings(userId, us.getQuietStart(), us.getQuietEnd(), null);
+            sendText(chatId, stopped ? "⏹ Session stopped." : "No active session."); return;
         }
-    }
-
-    // ── Action helpers ───────────────────────────────────────────────────────
-
-    private void doMarkDone(long chatId, long userId, String shortId) {
-        taskService.findTaskByShortId(userId, shortId).ifPresentOrElse(task -> {
-            undoStack.put(userId, new UndoAction(UndoType.MARK_DONE, task.getId(), task.getTitle(), Task.Status.ACTIVE, task.getDueAt()));
-            taskService.markDone(userId, shortId);
-            taskService.resetReminderIgnoredCount(task.getId());
-            String streakMsg = task.isHabit() ? "\n🔄 Habit streak updated!" : "";
-            sendText(chatId, "✅ Done: " + task.getTitle() + streakMsg + "\n\nSay \"undo\" to reverse.");
-        }, () -> sendText(chatId, "Task not found: " + shortId));
-    }
-
-    private void doDelete(long chatId, long userId, String shortId) {
-        taskService.findTaskByShortId(userId, shortId).ifPresentOrElse(task -> {
-            undoStack.put(userId, new UndoAction(UndoType.DELETE, task.getId(), task.getTitle(), Task.Status.ACTIVE, task.getDueAt()));
-            taskService.deleteTask(userId, shortId);
-            sendText(chatId, "🗑 Deleted: " + task.getTitle() + "\n\nSay \"undo\" to reverse.");
-        }, () -> sendText(chatId, "Task not found: " + shortId));
-    }
-
-    private void doSnooze(long chatId, long userId, String shortId, int hours) {
-        taskService.findTaskByShortId(userId, shortId).ifPresentOrElse(task -> {
-            undoStack.put(userId, new UndoAction(UndoType.SNOOZE, task.getId(), task.getTitle(), Task.Status.ACTIVE, task.getDueAt()));
-            taskService.snoozeTask(userId, shortId, Duration.ofHours(hours));
-            taskService.resetReminderIgnoredCount(task.getId());
-            sendText(chatId, "⏰ Snoozed \"" + task.getTitle() + "\" by " + hours + "h.\n\nSay \"undo\" to reverse.");
-        }, () -> sendText(chatId, "Task not found: " + shortId));
-    }
-
-
-    // ── Notes ────────────────────────────────────────────────────────────────
-
-    private void handleSaveNote(long chatId, long userId, String rawText, String source) {
-        sendText(chatId, "📝 Saving your note...");
-        try {
-            NoteService.StructuredNote structured = noteService.structure(rawText);
-            NotionService.SavedNote saved = notionService.saveNote(
-                    structured.title(),
-                    structured.category(),
-                    structured.tags(),
-                    rawText,
-                    structured.summary(),
-                    source
-            );
-
-            StringBuilder sb = new StringBuilder();
-            sb.append("✅ Note saved to Notion!\n\n");
-            sb.append("📌 ").append(saved.title()).append("\n");
-            sb.append("📁 ").append(saved.category());
-            if (!saved.tags().isEmpty()) {
-                sb.append("  🏷 ").append(String.join(", ", saved.tags()));
-            }
-            sb.append("\n\n💬 ").append(structured.summary());
-
-            sendText(chatId, sb.toString());
-        } catch (Exception e) {
-            System.err.println("handleSaveNote error: " + e.getMessage());
-            sendText(chatId, "Sorry, couldn't save that note. Check your Notion connection.");
+        if (lower.contains("pomodoro") && !lower.contains("task") && !lower.contains("what")
+                && !lower.contains("show") && !lower.contains("list")) {
+            int work = 25, brk = 5, rounds = 4;
+            java.util.regex.Matcher mWork = java.util.regex.Pattern.compile("(\\d+)\\s*min").matcher(lower);
+            java.util.regex.Matcher mHour = java.util.regex.Pattern.compile("(\\d+)\\s*hour").matcher(lower);
+            if (mWork.find()) work = Integer.parseInt(mWork.group(1));
+            else if (mHour.find()) { int total = Integer.parseInt(mHour.group(1)) * 60; rounds = Math.max(1, total / 25); }
+            handleStartPomodoro(chatId, userId, "your session", work, brk, rounds); return;
         }
-    }
 
-    private void handleSearchNotes(long chatId, String query) {
-        sendText(chatId, "🔍 Searching your notes...");
-        try {
-            NoteService.NoteSearchParams params = noteService.parseSearchQuery(query);
-            // sendText(chatId, "🔍 query:\"" + params.query() + "\" cat:" + params.categoryFilter() + " recent:" + params.isRecent()); // debug
-            java.util.List<NotionService.NoteResult> results;
-
-            if (params.isRecent()) {
-                results = notionService.getRecentNotes(params.limit());
-            } else {
-                results = notionService.searchNotes(params.query(), params.categoryFilter(), params.limit());
-            }
-
-            if (results.isEmpty()) {
-                sendText(chatId, "No notes found matching that. Try /recentnotes to see what you've saved.");
-                return;
-            }
-
-            StringBuilder sb = new StringBuilder();
-            sb.append("📝 Found ").append(results.size()).append(" note(s):\n─────────────────\n\n");
-            for (NotionService.NoteResult note : results) {
-                sb.append("📌 **").append(note.title()).append("**\n");
-                sb.append("📁 ").append(note.category());
-                if (!note.tags().isEmpty()) sb.append("  🏷 ").append(String.join(", ", note.tags()));
-                sb.append("  📅 ").append(note.created()).append("\n");
-                if (!note.summary().isBlank()) sb.append(note.summary()).append("\n");
-                sb.append("\n");
-            }
-            sendText(chatId, sb.toString().trim());
-        } catch (Exception e) {
-            System.err.println("handleSearchNotes error: " + e.getMessage());
-            sendText(chatId, "Couldn't search notes right now.");
+        // Set location reminder pending
+        if (lower.contains("location") && lower.contains("remind") || lower.contains("when i get to") || lower.contains("when i arrive")) {
+            taskService.findTaskByTitleHint(userId, text).ifPresentOrElse(task -> {
+                pendingInputs.put(userId, new PendingInput(PendingKind.LOCATION_TASK_HINT, task.getTitle()));
+                sendText(chatId, "📍 Send me your location and I'll set a reminder for \"" + task.getTitle() + "\".");
+            }, () -> routeToAgent(chatId, userId, text));
+            return;
         }
+
+        // Everything else goes to the agent
+        routeToAgent(chatId, userId, text);
     }
 
+    // ── Agent routing ─────────────────────────────────────────────────────────
 
-    private void handleSetupNotes(long chatId) {
-        if (notionService == null) {
-            sendText(chatId, "Notes not enabled. Add NOTION_API_KEY and NOTION_DATABASE_ID to your supervisor conf."); return;
+    private void routeToAgent(long chatId, long userId, String text) {
+        if (claudeService == null) { sendText(chatId, "AI not configured. Set CLAUDE_API_KEY."); return; }
+        String response = claudeService.chat(userId, chatId, text, taskService, notionService, noteService,
+                msg -> sendText(chatId, msg));
+        // Don't send if Claude's response is just acknowledging a direct send
+        if (response != null && !response.isBlank()
+                && !response.equals("SENT_DIRECTLY")
+                && !response.contains("SENT_DIRECTLY")) {
+            sendText(chatId, response);
         }
-        sendText(chatId, "⚙️ Setting up your Quick Notes database...");
-        try {
-            notionService.setupDatabase();
-            sendText(chatId, "✅ Quick Notes is ready!\n\n"
-                    + "Try it:\n"
-                    + "• \"remember that Jacob's birthday is 15 May at Orchard\"\n"
-                    + "• \"note: CEE report needs Gantt chart exported as PDF\"\n"
-                    + "• Or send a voice note!\n\n"
-                    + "To recall: \"when is Jacob's birthday?\"");
-        } catch (Exception e) {
-            sendText(chatId, "Setup failed: " + e.getMessage() + "\n\nCheck your NOTION_API_KEY and NOTION_DATABASE_ID.");
-        }
-    }
-
-    private void handleRecentNotes(long chatId, long userId) {
-        if (notionService == null) {
-            sendText(chatId, "Notes not enabled. Set NOTION_API_KEY and NOTION_DATABASE_ID."); return;
-        }
-        sendText(chatId, "📝 Fetching recent notes...");
-        try {
-            java.util.List<NotionService.NoteResult> results = notionService.getRecentNotes(5);
-            if (results.isEmpty()) { sendText(chatId, "No notes saved yet. Just type or voice anything to save it!"); return; }
-            StringBuilder sb = new StringBuilder("📝 Recent Notes\n─────────────────\n\n");
-            for (NotionService.NoteResult note : results) {
-                sb.append("📌 ").append(note.title()).append("\n");
-                sb.append("   📁 ").append(note.category());
-                if (!note.tags().isEmpty()) sb.append("  🏷 ").append(String.join(", ", note.tags()));
-                sb.append("  📅 ").append(note.created()).append("\n\n");
-            }
-            sendText(chatId, sb.toString().trim());
-        } catch (Exception e) {
-            sendText(chatId, "Couldn't fetch recent notes right now.");
-        }
-    }
-
-
-    // ── Conversation history ─────────────────────────────────────────────────
-
-    /**
-     * Only record user messages that are conversational (not slash commands).
-     * Only record assistant responses that are meaningful summaries.
-     * This keeps history clean so Haiku doesn't get confused by JSON blobs.
-     */
-    private void addToHistory(long userId, String role, String content) {
-        if (content == null || content.isBlank()) return;
-        // Don't store raw JSON responses as assistant history
-        if (role.equals("assistant") && content.trim().startsWith("{")) return;
-        conversationHistory.computeIfAbsent(userId, k -> new java.util.LinkedList<>())
-                .add(java.util.Map.of("role", role, "content", content));
-        java.util.LinkedList<java.util.Map<String, String>> hist = conversationHistory.get(userId);
-        // Keep max MAX_HISTORY pairs
-        while (hist.size() > MAX_HISTORY * 2) hist.removeFirst();
-    }
-
-    private java.util.List<java.util.Map<String, String>> getHistory(long userId) {
-        java.util.LinkedList<java.util.Map<String, String>> hist = conversationHistory.get(userId);
-        if (hist == null || hist.size() < 2) return java.util.List.of();
-        // Return all but the last user message (which is being sent as the current message)
-        java.util.List<java.util.Map<String, String>> list = new java.util.ArrayList<>(hist);
-        return list.subList(0, list.size() - 1);
-    }
-
-    private void recordAssistantResponse(long userId, String summary) {
-        // Only record meaningful assistant messages, not raw JSON or system confirmations
-        if (summary == null || summary.isBlank() || summary.startsWith("{")) return;
-        addToHistory(userId, "assistant", summary);
-    }
-
-    // ── Pomodoro ─────────────────────────────────────────────────────────────
-
-    private void handleStartPomodoro(long chatId, long userId, String taskTitle, int workMins, int breakMins, int rounds) {
-        // Store pomodoro state — reuse focus sessions table for each round
-        taskService.stopFocusSession(userId); // cancel any existing
-        FocusSession session = taskService.startFocusSession(userId, chatId,
-                taskTitle + " [Pomodoro 1/" + rounds + "]", workMins);
-        if (session == null) { sendText(chatId, "Couldn't start Pomodoro session."); return; }
-
-        // Store pomodoro config in a note so scheduler can continue rounds
-        String pomConfig = "POMODORO:" + rounds + ":" + workMins + ":" + breakMins + ":1:work";
-        UserSettings us = taskService.getUserSettings(userId);
-        taskService.saveUserSettings(userId, us.getQuietStart(), us.getQuietEnd(), pomConfig);
-
-        sendText(chatId, "🍅 Pomodoro started!\n\n"
-                + "Task: " + taskTitle + "\n"
-                + "Round 1 of " + rounds + " — " + workMins + " min work\n"
-                + "Break: " + breakMins + " min between rounds\n\n"
-                + "Focus up! I'll ping you when it's break time. 💪");
-    }
-
-    private static int parseIntSafe(String s, int fallback) {
-        try { return Integer.parseInt(s.trim()); } catch (Exception e) { return fallback; }
-    }
-
-    private void handleUndo(long chatId, long userId) {
-        UndoAction undo = undoStack.remove(userId);
-        if (undo == null) { sendText(chatId, "Nothing to undo."); return; }
-        taskService.restoreTask(undo.taskId(), undo.prevStatus(), undo.prevDueAt());
-        sendText(chatId, "↩️ Undone: \"" + undo.taskTitle() + "\" restored.");
-    }
-
-    private void handleBulkAction(long chatId, long userId, ClaudeService.ParsedTask p) {
-        String target = p.bulkTarget(), op = p.bulkOp();
-        if (target == null || op == null) { sendText(chatId, "What would you like to do in bulk?"); return; }
-        int hours = p.snoozeHours() > 0 ? p.snoozeHours() : 24;
-        int count = switch (target.toLowerCase()) {
-            case "overdue" -> switch (op.toLowerCase()) {
-                case "snooze" -> taskService.bulkSnoozeOverdue(userId, hours);
-                case "delete" -> { List<Task> t = taskService.getOverdueTasks(userId); t.forEach(x -> taskService.deleteTask(userId, x.shortId())); yield t.size(); }
-                case "mark_done" -> { List<Task> t = taskService.getOverdueTasks(userId); t.forEach(x -> taskService.markDone(userId, x.shortId())); yield t.size(); }
-                default -> 0;
-            };
-            case "stale" -> switch (op.toLowerCase()) {
-                case "delete" -> taskService.bulkDeleteStale(userId);
-                case "mark_done" -> { List<Task> t = taskService.getStaleTasks(userId); t.forEach(x -> taskService.markDone(userId, x.shortId())); yield t.size(); }
-                default -> 0;
-            };
-            case "all_done" -> taskService.deleteAllDone(userId);
-            default -> 0;
-        };
-        String opLabel = switch (op.toLowerCase()) {
-            case "snooze" -> "snoozed " + hours + "h"; case "delete" -> "deleted"; case "mark_done" -> "marked done"; default -> op;
-        };
-        sendText(chatId, count > 0 ? "✅ " + count + " task(s) " + opLabel + "." : "No tasks to act on.");
-    }
-
-    /** Resolves ALL_OVERDUE / ALL_STALE / ALL_ACTIVE group keywords. Returns null for normal title hints. */
-    private List<Task> resolveGroupTarget(String targetTitle, long userId) {
-        if (targetTitle == null) return null;
-        return switch (targetTitle.toUpperCase()) {
-            case "ALL_OVERDUE" -> taskService.getOverdueTasks(userId);
-            case "ALL_STALE"   -> taskService.getStaleTasks(userId);
-            case "ALL_ACTIVE"  -> taskService.getActiveTasks(userId);
-            default -> null;
-        };
-    }
-
-    private String buildFilterTitle(ClaudeService.ParsedTask p) {
-        List<String> parts = new ArrayList<>();
-        if (p.filterPriority() != null) parts.add(p.filterPriority());
-        if (p.filterCategory() != null)  parts.add(p.filterCategory());
-        if (p.filterDueRange() != null)   parts.add(p.filterDueRange().replace("_", " "));
-        return "🔍 " + String.join(" · ", parts) + " tasks";
-    }
-
-    // ── Pending edits ────────────────────────────────────────────────────────
-
-    private void handlePendingInput(long chatId, long userId, String text) {
-        PendingInput pending = pendingInputs.remove(userId);
-        if (pending == null) return;
-        boolean ok = switch (pending.kind()) {
-            case TASK_TITLE        -> taskService.updateTaskTitle(userId, pending.target(), text);
-            case TASK_PRIORITY     -> taskService.updateTaskPriority(userId, pending.target(), text);
-            case TASK_CATEGORY     -> taskService.updateTaskCategory(userId, pending.target(), text);
-            case TASK_DUE          -> taskService.updateTaskDueAt(userId, pending.target(), text);
-            case TASK_RECURRENCE   -> taskService.updateTaskRecurrence(userId, pending.target(), text);
-            case TASK_NOTES        -> taskService.updateTaskNotes(userId, pending.target(), text);
-            case REMINDER_INTERVAL -> { try { taskService.setReminderInterval(userId, pending.target(), Integer.parseInt(text.trim())); yield true; } catch (Exception e) { yield false; } }
-            case CATEGORY_RENAME   -> taskService.renameCategory(userId, pending.target(), text);
-            case LOCATION_TASK_HINT -> false; // handled in handleLocation
-        };
-        String label = switch (pending.kind()) {
-            case TASK_TITLE -> "title"; case TASK_PRIORITY -> "priority"; case TASK_CATEGORY -> "category";
-            case TASK_DUE -> "due date"; case TASK_RECURRENCE -> "recurrence"; case TASK_NOTES -> "notes";
-            case REMINDER_INTERVAL -> "reminder interval"; case CATEGORY_RENAME -> "category name";
-            case LOCATION_TASK_HINT -> "";
-        };
-        if (!label.isBlank()) sendText(chatId, ok ? "Updated " + label + "." : "Task not found or invalid value.");
     }
 
     // ── Callbacks ────────────────────────────────────────────────────────────
@@ -743,135 +222,100 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
         long userId   = update.getCallbackQuery().getFrom().getId();
         int messageId = toIntExact(update.getCallbackQuery().getMessage().getMessageId());
 
-        if (data.startsWith("done:"))     { String id = data.substring(5);  doMarkDone(chatId, userId, id); answer(update, "Done!");    editMessage(chatId, messageId, "✅ Completed", null); return; }
-        if (data.startsWith("delete:"))   { String id = data.substring(7);  doDelete(chatId, userId, id);   answer(update, "Deleted");  editMessage(chatId, messageId, "🗑 Deleted", null); return; }
+        if (data.startsWith("done:")) {
+            String id = data.substring(5);
+            taskService.findTaskByShortId(userId, id).ifPresentOrElse(task -> {
+                taskService.markDone(userId, id);
+                taskService.resetReminderIgnoredCount(task.getId());
+                try { answer(update, "Done!"); editMessage(chatId, messageId, "✅ " + task.getTitle(), null); }
+                catch (TelegramApiException e) { throw new RuntimeException(e); }
+            }, () -> sendText(chatId, "Task not found."));
+            return;
+        }
+        if (data.startsWith("delete:")) {
+            String id = data.substring(7);
+            taskService.findTaskByShortId(userId, id).ifPresentOrElse(task -> {
+                taskService.deleteTask(userId, id);
+                try { answer(update, "Deleted"); editMessage(chatId, messageId, "🗑 " + task.getTitle(), null); }
+                catch (TelegramApiException e) { throw new RuntimeException(e); }
+            }, () -> sendText(chatId, "Task not found."));
+            return;
+        }
         if (data.startsWith("snooze24:")) {
-            String id = data.substring(9); doSnooze(chatId, userId, id, 24); answer(update, "Snoozed 24h");
-            taskService.findTaskByShortId(userId, id).ifPresent(task -> {
-                try { editMessage(chatId, messageId, "⏰ Snoozed 24h\n\n" + taskService.formatTask(task), buildTaskKeyboard(task)); }
-                catch (TelegramApiException e) { throw new RuntimeException(e); }
-            }); return;
-        }
-        if (data.startsWith("editmenu:")) {
             String id = data.substring(9);
-            taskService.findTaskByShortId(userId, id).ifPresent(task -> {
-                try { answer(update, "Choose what to edit"); editMessage(chatId, messageId, "✏️ Editing\n\n" + taskService.formatTask(task), buildTaskEditKeyboard(task)); }
+            taskService.findTaskByShortId(userId, id).ifPresentOrElse(task -> {
+                taskService.snoozeTask(userId, id, Duration.ofHours(24));
+                try { answer(update, "Snoozed 24h"); editMessage(chatId, messageId, "⏰ Snoozed: " + task.getTitle(), null); }
                 catch (TelegramApiException e) { throw new RuntimeException(e); }
-            }); return;
-        }
-        if (data.startsWith("editback:")) {
-            String id = data.substring(9);
-            taskService.findTaskByShortId(userId, id).ifPresent(task -> {
-                try { answer(update, "Back"); editMessage(chatId, messageId, taskService.formatTask(task), buildTaskKeyboard(task)); }
-                catch (TelegramApiException e) { throw new RuntimeException(e); }
-            }); return;
-        }
-        if (data.startsWith("edittitle:"))   { promptPending(update, chatId, userId, PendingKind.TASK_TITLE,        data.substring(10), "Send the new task title."); return; }
-        if (data.startsWith("editprio:"))    { promptPending(update, chatId, userId, PendingKind.TASK_PRIORITY,     data.substring(9),  "Send priority: high, medium, low, or daily."); return; }
-        if (data.startsWith("editcat:"))     { promptPending(update, chatId, userId, PendingKind.TASK_CATEGORY,     data.substring(8),  "Send category name, or 'none' to clear."); return; }
-        if (data.startsWith("editdue:"))     { promptPending(update, chatId, userId, PendingKind.TASK_DUE,          data.substring(8),  "Send new due date (e.g. tomorrow 8pm, none)."); return; }
-        if (data.startsWith("editrecur:"))   { promptPending(update, chatId, userId, PendingKind.TASK_RECURRENCE,   data.substring(10), "Send recurrence: none, daily, weekly, or monthly."); return; }
-        if (data.startsWith("editnotes:"))   { promptPending(update, chatId, userId, PendingKind.TASK_NOTES,        data.substring(10), "Send notes for this task, or 'none' to clear."); return; }
-        if (data.startsWith("editinterval:")){ promptPending(update, chatId, userId, PendingKind.REMINDER_INTERVAL, data.substring(13), "Send reminder interval in minutes (e.g. 30, 60, 120)."); return; }
-        if (data.startsWith("catedit:")) {
-            String cat = decodeValue(data.substring(8));
-            pendingInputs.put(userId, new PendingInput(PendingKind.CATEGORY_RENAME, cat));
-            answer(update, "Send new name"); sendText(chatId, "Send new name for '" + cat + "'. Use /cancel to stop."); return;
-        }
-        if (data.startsWith("catdelete:")) {
-            String cat = decodeValue(data.substring(10));
-            boolean ok = taskService.deleteCategory(userId, cat);
-            answer(update, ok ? "Deleted" : "Not found");
-            editMessage(chatId, messageId, ok ? "🗑 Deleted category: " + cat : "Category not found.", null); return;
-        }
-        if (data.equals("showedit")) {
-            // User tapped "Edit Tasks" from the list view — resend as editable cards
-            // We need userId context — infer from active tasks
-            answer(update, "Here are your tasks");
-            sendEditableTaskList(chatId, "📋 Active Tasks", taskService.getActiveTasks(userId));
+            }, () -> sendText(chatId, "Task not found."));
             return;
         }
         if (data.equals("cleardone")) {
             int n = taskService.deleteAllDone(userId);
-            answer(update, n > 0 ? "Cleared " + n : "Nothing to clear");
-            editMessage(chatId, messageId, n > 0 ? "🗑 Cleared " + n + " completed task(s)." : "No completed tasks.", null); return;
+            answer(update, n > 0 ? "Cleared " + n : "Nothing");
+            editMessage(chatId, messageId, n > 0 ? "🗑 Cleared " + n + " completed tasks." : "No completed tasks.", null);
         }
-    }
-
-    private void promptPending(Update update, long chatId, long userId, PendingKind kind, String target, String prompt) throws TelegramApiException {
-        pendingInputs.put(userId, new PendingInput(kind, target));
-        answer(update, prompt);
-        sendText(chatId, prompt + " Use /cancel to stop.");
     }
 
     // ── Display ──────────────────────────────────────────────────────────────
 
-    private void sendTaskAdded(long chatId, Task task) {
-        execute(SendMessage.builder().chatId(chatId).text("Task added!\n\n" + taskService.formatTask(task)).replyMarkup(buildTaskKeyboard(task)).build());
-    }
-
-    private void sendTaskList(long chatId, String title, List<Task> tasks, boolean isDone) {
+    private void sendTaskList(long chatId, String title, List<Task> tasks) {
         if (tasks.isEmpty()) { sendText(chatId, title + "\n\nNo tasks found."); return; }
 
-        java.util.List<Task> mainTasks  = tasks.stream().filter(t -> t.getPriority() != Task.Priority.DAILY).collect(java.util.stream.Collectors.toList());
-        java.util.List<Task> dailyTasks = tasks.stream().filter(t -> t.getPriority() == Task.Priority.DAILY).collect(java.util.stream.Collectors.toList());
+        List<Task> main  = tasks.stream().filter(t -> t.getPriority() != Task.Priority.DAILY).toList();
+        List<Task> daily = tasks.stream().filter(t -> t.getPriority() == Task.Priority.DAILY).toList();
 
-        long high = mainTasks.stream().filter(t -> t.getPriority() == Task.Priority.HIGH).count();
-        long med  = mainTasks.stream().filter(t -> t.getPriority() == Task.Priority.MEDIUM).count();
-        long low  = mainTasks.stream().filter(t -> t.getPriority() == Task.Priority.LOW).count();
+        long high = main.stream().filter(t -> t.getPriority() == Task.Priority.HIGH).count();
+        long med  = main.stream().filter(t -> t.getPriority() == Task.Priority.MEDIUM).count();
+        long low  = main.stream().filter(t -> t.getPriority() == Task.Priority.LOW).count();
 
         StringBuilder sb = new StringBuilder();
         sb.append(title).append("  (").append(tasks.size()).append(")\n");
         if (high > 0) sb.append("🔴 ").append(high).append(" high   ");
         if (med  > 0) sb.append("🟡 ").append(med).append(" medium   ");
         if (low  > 0) sb.append("🟢 ").append(low).append(" low");
-        if (!dailyTasks.isEmpty()) sb.append("  🔵 ").append(dailyTasks.size()).append(" daily");
+        if (!daily.isEmpty()) sb.append("  🔵 ").append(daily.size()).append(" daily");
         sb.append("\n─────────────────\n");
 
-        // Main tasks (high/medium/low)
-        for (int i = 0; i < mainTasks.size(); i++) {
-            Task task = mainTasks.get(i);
-            String dot = switch (task.getPriority()) { case HIGH -> "🔴"; case MEDIUM -> "🟡"; case LOW -> "🟢"; case DAILY -> "🔵"; };
-            String due = task.getDueAt() != null ? "  📅 " + taskService.friendlyDate(task.getDueAt()) : "";
-            String cat = "none".equals(task.getCategory()) ? "" : "  📁 " + task.getCategory();
-            String habit = task.isHabit() ? "  🔄" : "";
-            String loc   = task.hasLocationReminder() ? "  📍" : "";
-            sb.append(dot).append(" ").append(task.getTitle()).append("\n");
-            sb.append("   ").append(cat).append(due).append(habit).append(loc).append("\n");
-            if (i < mainTasks.size() - 1) sb.append("\n");
+        for (int i = 0; i < main.size(); i++) {
+            Task t = main.get(i);
+            String dot = dot(t);
+            String due = t.getDueAt() != null ? "  📅 " + taskService.friendlyDate(t.getDueAt()) : "";
+            String cat = "none".equals(t.getCategory()) ? "" : "  📁 " + t.getCategory();
+            sb.append(dot).append(" ").append(t.getTitle()).append("\n");
+            sb.append("   ").append(cat).append(due);
+            if (t.isHabit()) sb.append("  🔄");
+            sb.append("\n");
+            if (i < main.size() - 1) sb.append("\n");
         }
 
-        // Daily tasks section
-        if (!dailyTasks.isEmpty()) {
-            if (!mainTasks.isEmpty()) sb.append("\n");
-            sb.append("─────────────────\n");
-            sb.append("🔵 Daily\n");
-            sb.append("─────────────────\n");
-            for (int i = 0; i < dailyTasks.size(); i++) {
-                Task task = dailyTasks.get(i);
-                String due = task.getDueAt() != null ? "  📅 " + taskService.friendlyDate(task.getDueAt()) : "";
-                String cat = "none".equals(task.getCategory()) ? "" : "  📁 " + task.getCategory();
-                String habit = task.isHabit() ? "  🔄" : "";
-                sb.append("🔵 ").append(task.getTitle()).append("\n");
-                sb.append("   ").append(cat).append(due).append(habit).append("\n");
-                if (i < dailyTasks.size() - 1) sb.append("\n");
+        if (!daily.isEmpty()) {
+            if (!main.isEmpty()) sb.append("\n");
+            sb.append("─────────────────\n🔵 Daily\n─────────────────\n");
+            for (Task t : daily) {
+                String due = t.getDueAt() != null ? "  📅 " + taskService.friendlyDate(t.getDueAt()) : "";
+                String cat = "none".equals(t.getCategory()) ? "" : "  📁 " + t.getCategory();
+                sb.append("🔵 ").append(t.getTitle()).append("\n");
+                sb.append("   ").append(cat).append(due).append("\n\n");
             }
         }
 
-        if (isDone) {
-            execute(SendMessage.builder().chatId(chatId).text(sb.toString().trim())
-                    .replyMarkup(InlineKeyboardMarkup.builder().keyboard(List.of(new InlineKeyboardRow(
-                            InlineKeyboardButton.builder().text("🗑 Clear All Completed").callbackData("cleardone").build()
-                    ))).build()).build());
-        } else {
-            // Active task list — just show text, no button clutter
-            sendText(chatId, sb.toString().trim());
-        }
+        sendText(chatId, sb.toString().trim());
     }
 
-    private void sendEditableTaskList(long chatId, String title, List<Task> tasks) {
-        if (tasks.isEmpty()) { sendText(chatId, title + "\n\nNo tasks found."); return; }
-        sendText(chatId, "✏️ " + title + " — tap a button to act:");
+    private void sendDoneList(long chatId, List<Task> tasks) {
+        if (tasks.isEmpty()) { sendText(chatId, "✅ Completed\n\nNo completed tasks."); return; }
+        StringBuilder sb = new StringBuilder("✅ Completed  (" + tasks.size() + ")\n─────────────────\n");
+        tasks.forEach(t -> sb.append("✅ ").append(t.getTitle()).append("\n"));
+        execute(SendMessage.builder().chatId(chatId).text(sb.toString().trim())
+                .replyMarkup(InlineKeyboardMarkup.builder().keyboard(List.of(new InlineKeyboardRow(
+                        InlineKeyboardButton.builder().text("🗑 Clear All Completed").callbackData("cleardone").build()
+                ))).build()).build());
+    }
+
+    private void sendEditableTaskList(long chatId, List<Task> tasks) {
+        if (tasks.isEmpty()) { sendText(chatId, "No active tasks."); return; }
+        sendText(chatId, "✏️ Active Tasks — tap to act:");
         for (Task task : tasks) {
             execute(SendMessage.builder().chatId(chatId).text(taskService.formatTask(task))
                     .replyMarkup(buildTaskKeyboard(task)).build());
@@ -880,39 +324,52 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
 
     private void sendHabitList(long chatId, long userId) {
         List<Task> habits = taskService.getHabits(userId);
-        if (habits.isEmpty()) {
-            sendText(chatId, "No habits yet.\n\nSay: \"mark gym as a habit\" to start tracking streaks."); return;
-        }
+        if (habits.isEmpty()) { sendText(chatId, "No habits yet.\n\nSay: \"mark gym as a habit\""); return; }
         StringBuilder sb = new StringBuilder("🔄 Habits (" + habits.size() + ")\n─────────────────\n");
         habits.forEach(h -> {
             int streak = taskService.getHabitStreak(h.getId());
-            String dot = switch (h.getPriority()) { case HIGH -> "🔴"; case MEDIUM -> "🟡"; case LOW -> "🟢"; case DAILY -> "🔵"; };
-            sb.append(dot).append(" ").append(h.getTitle())
-              .append("\n  🔥 Streak: ").append(streak).append(" day(s)\n\n");
+            sb.append(dot(h)).append(" ").append(h.getTitle())
+              .append("\n  🔥 ").append(streak).append(" day streak\n\n");
         });
         sendText(chatId, sb.toString().trim());
     }
 
-    private void sendCategoryList(long chatId, long userId) {
-        List<String> cats = taskService.getCategories(userId);
-        if (cats.isEmpty()) { sendText(chatId, "No categories yet. Use /addcategory <n>"); return; }
-        sendText(chatId, "🏷 Categories (" + cats.size() + ")");
-        for (String cat : cats) {
-            execute(SendMessage.builder().chatId(chatId).text("📁 " + cat).replyMarkup(buildCategoryKeyboard(cat)).build());
-        }
+    private void handleRecentNotes(long chatId, long userId) {
+        if (notionService == null) { sendText(chatId, "Notes not enabled. Set NOTION_API_KEY and NOTION_DATABASE_ID."); return; }
+        sendText(chatId, "📝 Fetching recent notes...");
+        try {
+            List<NotionService.NoteResult> results = notionService.getRecentNotes(5);
+            if (results.isEmpty()) { sendText(chatId, "No notes saved yet."); return; }
+            StringBuilder sb = new StringBuilder("📝 Recent Notes\n─────────────────\n\n");
+            results.forEach(n -> sb.append("📌 ").append(n.title()).append("\n")
+                    .append("   📁 ").append(n.category())
+                    .append(n.tags().isEmpty() ? "" : "  🏷 " + String.join(", ", n.tags()))
+                    .append("  📅 ").append(n.created()).append("\n\n"));
+            sendText(chatId, sb.toString().trim());
+        } catch (Exception e) { sendText(chatId, "Couldn't fetch notes right now."); }
     }
 
-    private void sendTemplateList(long chatId, long userId) {
-        List<Template> templates = taskService.getTemplates(userId);
-        if (templates.isEmpty()) { sendText(chatId, "No templates yet.\n\nSay: \"save the gym task as a template called workout\""); return; }
-        StringBuilder sb = new StringBuilder("💾 Templates (" + templates.size() + ")\n─────────────────\n");
-        templates.forEach(t -> {
-            String dot = switch (t.getPriority()) { case HIGH -> "🔴"; case MEDIUM -> "🟡"; case LOW -> "🟢"; case DAILY -> "🔵"; };
-            sb.append(dot).append(" ").append(t.getName()).append("\n  Title: ").append(t.getTitle())
-              .append("\n  Category: ").append(t.getCategory()).append("\n\n");
-        });
-        sb.append("Say: \"use my [name] template for tomorrow\"");
-        sendText(chatId, sb.toString().trim());
+    private void handleSetupNotes(long chatId) {
+        if (notionService == null) { sendText(chatId, "Notes not enabled. Set NOTION_API_KEY and NOTION_DATABASE_ID."); return; }
+        sendText(chatId, "⚙️ Setting up your Quick Notes database...");
+        try {
+            notionService.setupDatabase();
+            sendText(chatId, "✅ Quick Notes is ready!\n\nTry: \"remember that Jacob's birthday is 15 May\"\nOr: \"when is Jacob's birthday?\"");
+        } catch (Exception e) { sendText(chatId, "Setup failed: " + e.getMessage()); }
+    }
+
+    // ── Pomodoro ─────────────────────────────────────────────────────────────
+
+    private void handleStartPomodoro(long chatId, long userId, String taskTitle, int workMins, int breakMins, int rounds) {
+        taskService.stopFocusSession(userId);
+        FocusSession session = taskService.startFocusSession(userId, chatId,
+                taskTitle + " [Pomodoro 1/" + rounds + "]", workMins);
+        if (session == null) { sendText(chatId, "Couldn't start Pomodoro session."); return; }
+        String pomConfig = "POMODORO:" + rounds + ":" + workMins + ":" + breakMins + ":1:work";
+        UserSettings us = taskService.getUserSettings(userId);
+        taskService.saveUserSettings(userId, us.getQuietStart(), us.getQuietEnd(), pomConfig);
+        sendText(chatId, "🍅 Pomodoro started!\n\nTask: " + taskTitle + "\nRound 1 of " + rounds
+                + " — " + workMins + " min work\nBreak: " + breakMins + " min\n\nFocus up! 💪");
     }
 
     // ── Keyboards ────────────────────────────────────────────────────────────
@@ -923,40 +380,15 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
                         InlineKeyboardButton.builder().text("✅ Done").callbackData("done:" + task.shortId()).build(),
                         InlineKeyboardButton.builder().text("⏰ Snooze 24h").callbackData("snooze24:" + task.shortId()).build()),
                 new InlineKeyboardRow(
-                        InlineKeyboardButton.builder().text("✏️ Edit").callbackData("editmenu:" + task.shortId()).build(),
                         InlineKeyboardButton.builder().text("🗑 Delete").callbackData("delete:" + task.shortId()).build())
         )).build();
     }
 
-    private InlineKeyboardMarkup buildTaskEditKeyboard(Task task) {
-        return InlineKeyboardMarkup.builder().keyboard(List.of(
-                new InlineKeyboardRow(
-                        InlineKeyboardButton.builder().text("Title").callbackData("edittitle:" + task.shortId()).build(),
-                        InlineKeyboardButton.builder().text("Priority").callbackData("editprio:" + task.shortId()).build()),
-                new InlineKeyboardRow(
-                        InlineKeyboardButton.builder().text("Category").callbackData("editcat:" + task.shortId()).build(),
-                        InlineKeyboardButton.builder().text("Due Date").callbackData("editdue:" + task.shortId()).build()),
-                new InlineKeyboardRow(
-                        InlineKeyboardButton.builder().text("Recurrence").callbackData("editrecur:" + task.shortId()).build(),
-                        InlineKeyboardButton.builder().text("Notes").callbackData("editnotes:" + task.shortId()).build()),
-                new InlineKeyboardRow(
-                        InlineKeyboardButton.builder().text("⏱ Reminder").callbackData("editinterval:" + task.shortId()).build(),
-                        InlineKeyboardButton.builder().text("⬅ Back").callbackData("editback:" + task.shortId()).build())
-        )).build();
-    }
-
-    private InlineKeyboardMarkup buildCategoryKeyboard(String category) {
-        String encoded = encodeValue(category);
-        return InlineKeyboardMarkup.builder().keyboard(List.of(new InlineKeyboardRow(
-                InlineKeyboardButton.builder().text("✏️ Rename").callbackData("catedit:" + encoded).build(),
-                InlineKeyboardButton.builder().text("🗑 Delete").callbackData("catdelete:" + encoded).build()
-        ))).build();
-    }
-
-    // ── Telegram helpers ─────────────────────────────────────────────────────
+    // ── Telegram helpers ──────────────────────────────────────────────────────
 
     private void answer(Update update, String text) throws TelegramApiException {
-        telegramClient.execute(AnswerCallbackQuery.builder().callbackQueryId(update.getCallbackQuery().getId()).text(text).build());
+        telegramClient.execute(AnswerCallbackQuery.builder()
+                .callbackQueryId(update.getCallbackQuery().getId()).text(text).build());
     }
 
     private void editMessage(long chatId, int messageId, String text, InlineKeyboardMarkup keyboard) throws TelegramApiException {
@@ -966,8 +398,7 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
     }
 
     public void sendText(long chatId, String text) {
-        execute(SendMessage.builder().chatId(chatId).text(text)
-                .parseMode("Markdown").build());
+        execute(SendMessage.builder().chatId(chatId).text(text).build());
     }
 
     private void execute(SendMessage msg) {
@@ -975,24 +406,36 @@ public class TaskBot implements LongPollingSingleThreadUpdateConsumer {
         catch (TelegramApiException e) { throw new RuntimeException("Failed to send message", e); }
     }
 
-    private String encodeValue(String v) { return Base64.getUrlEncoder().withoutPadding().encodeToString(v.getBytes(StandardCharsets.UTF_8)); }
-    private String decodeValue(String v) { return new String(Base64.getUrlDecoder().decode(v), StandardCharsets.UTF_8); }
+    private String dot(Task t) {
+        return switch (t.getPriority()) { case HIGH -> "🔴"; case MEDIUM -> "🟡"; case LOW -> "🟢"; case DAILY -> "🔵"; };
+    }
 
-    private static String addHelpText() {
+    private static int parseIntSafe(String s, int fallback) {
+        try { return Integer.parseInt(s.trim()); } catch (Exception e) { return fallback; }
+    }
+
+    private static String helpText() {
         return """
-                /add Finish CEE report
-                /add Submit assignment tomorrow 8pm #school !high
-                /add Pay rent #finance 2026-04-25 every month
-
-                Quick tags: #category  !high/!medium/!low  every week
-
-                💡 Or just type naturally:
-                "remind me to submit the report tomorrow at 3pm"
-                "show my high priority school tasks"
-                "change gym task to high priority"
-                "mark gym as a habit"
-                "start a 25 min focus session for CEE report"
-                🎤 Or send a voice note!
+                I'm Proton — just talk to me naturally!
+                
+                Examples:
+                "add gym tomorrow 9am"
+                "add report friday 3pm #school high priority"
+                "mark gym done"
+                "reschedule report to next monday"
+                "snooze all overdue tasks by 2 hours"
+                "what's due today?"
+                "show my high priority tasks"
+                "remember that Jacob's birthday is 15 May"
+                "when is Jacob's birthday?"
+                "mark daily quran as a habit"
+                "no reminders after 10pm"
+                
+                Commands:
+                /tasks /today /overdue /review /habits
+                /recentnotes /setupnotes /edittasks
+                /pomodoro [work] [break] [rounds]
+                /stoppomodoro /doneitems /cleardone
                 """;
     }
 }
